--- a/views/account_view.xml
+++ b/views/account_view.xml
@@ -2,40 +2,17 @@
 <openerp>
     <data>
 
-        <record model="ir.ui.view" id="invoice_form_gface_efactura">
-            <field name="name">account.invoice.form.gface_efactura</field>
-            <field name="model">account.invoice</field>
-            <field name="inherit_id" ref="account.invoice_form"/>
+        <record model="ir.ui.view" id="view_move_form_gface_efactura">
+            <field name="name">account.move.form.gface_efactura</field>
+            <field name="model">account.move</field>
+            <field name="inherit_id" ref="account.view_move_form"/>
             <field name="arch" type="xml">
                 <data>
-                    <field name="comment" position="after">
+                    <field name="invoice_origin" position="after">
                         <group>
                             <field name="firma_gface"/>
                             <field name="pdf_gface"/>
                         </group>
-                    </field>
-                </data>
-            </field>
-        </record>
-
-        <record model="ir.ui.view" id="journal_form_gface_efactura">
-            <field name="name">account.journal.form.gface_efactura</field>
-            <field name="model">account.journal</field>
-            <field name="inherit_id" ref="account.view_account_journal_form"/>
-            <field name="arch" type="xml">
-                <data>
-                    <field name="group_invoice_lines" position="after">
-                        <field name="requestor_gface"/>
-                        <field name="usuario_gface"/>
-                        <field name="nit_gface"/>
-                        <field name="serie_gface"/>
-                        <field name="numero_autorizacion_gface"/>
-                        <field name="fecha_resolucion_gface"/>
-                        <field name="rango_inicial_gface"/>
-                        <field name="rango_final_gface"/>
-                        <field name="numero_establecimiento_gface"/>
-                        <field name="dispositivo_gface"/>
-                        <field name="tipo_documento_gface"/>
                     </field>
                 </data>
             </field>
